[package]
name = "hmpocketSecrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fltk = { version = "^1.3", features = ["fltk-bundled"] }
serde_json = "1.0.96"
# lazy_static = "1.4.0"
regex = "1.7.3"
clipboard = "0.5"
fltk-theme = "0.7.0"
winreg  = "0.50.0"
msgbox = "0.7.0"
magic-crypt = "3.1.12"
winapi = "0.3.9"

[build-dependencies]
fl2rust = "0.5.13"
winres = "0.1.12"
winapi = "0.3.9"
